fixing home menu botto spacing

--- a/public/css/_home.scss
+++ b/public/css/_home.scss
@@ -14,7 +14,7 @@
         width: 18.4vw;
         padding: 1.2rem;
         position: absolute;
-        top: 60%;
+        top: 58%;
         left: 50%;
         transform-origin: center left;
         transform: translateX(-50%);
@@ -87,7 +87,7 @@
         transform: scale(0.8, 1.2) translateX(-50%);
     }
     100%{
-        top: 55%;
+        top: 58%;
         transform: scaleY(1,1) translateX(-50%);
     }
 }
@@ -102,7 +102,7 @@
         transform: scale(0.8, 1.2) translateX(-50%);
     }
     0%{
-        top: 55%;
+        top: 58%;
         transform: scaleY(1,1) translateX(-50%);
     }
 }
